Some Cleanups